<resources>
    <string name="arsenic">Arsenic</string>
    <string name="app_name">Arsenic Updater</string>
    <string name="kernelDownloader">Arsenic Kernel Downloader</string>

    <!-- Home -->
    <string name="title_home">Home</string>
    <string name="current_version">Current Kernel Version:</string>
    <string name="latest_version">Latest Version Installed</string>
    <string name="newer_version">Newer version Available</string>
    <string name="unknown_version">Unknown Version of Arsenic Installed</string>
    <string name="unknown_kernel">Arsenic Kernel is not installed</string>
    <string name="cannot_check_for_update">Cannot check for updates</string>
    <string name="failed_update_check">Failed to check for updates</string>
    <string name="checking_update">Checking for Updates</string>

    <!-- Download -->
    <string name="title_download">Downloads</string>
    <string name="version_select">Select Version</string>
    <string name="search">Search</string>
    <string name="update_check_text">Tap to check for updates</string>
    <string name="download_update_text">Download</string>
    <string name="download_hint">Hint</string>

    <!-- About -->
    <string name="about_desc">Updating kernels to the latest version couldn\'t have been any easier</string>
    <string name="contact_us">{cmd-email} CONTACT US</string>
    <string name="fork_us">{cmd-github-face} FORK US ON GITHUB</string>
    <string name="follow_us">{cmd-twitter} FOLLOW US ON TWITTER</string>
    <string name="check_us_out">{cmd-link} CHECK OUR WEBSITE</string>

    <string name="licenses">Open Source Libraries Used</string>
    <string name="title_about">About</string>
    <string name="easter_egg">Woosh!</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="email" translatable="false">nimitmehta95@gmail.com</string>
    <string name="website" translatable="false">http://arsenic-kernel.download</string>
    <string name="twitter" translatable="false">Th3_0bserver</string>
    <string name="github" translatable="false">thunderbottom/ArsenicUpdater</string>

    <!-- Storage -->
    <string name="update_url" translatable="false">
        https://raw.githubusercontent.com/Thunderbottom/test/master/update.json
    </string>
    <string name="update_location" translatable="false">/.arsenicupdater/</string>
    <string name="download_location" translatable="false">/.arsenicupdater/downloads/</string>
    <string name="create_failed">Failed to create directory</string>
    <string name="permission_request">Permission Required</string>
    <string name="storage_permission">To download the kernel, allow application to access your storage.</string>
    <string name="continue_settings">Continue</string>
    <string name="not_now">Not Now</string>

    <!-- Downloads -->
    <string name="downloading_update">Downloading Update</string>
    <string name="download_failed">Download Failed.</string>
    <string name="download_complete">Download Complete.</string>
    <string name="download_canceled">Download Canceled.</string>
    <string name="kernel_version_fail">Failed to get kernel versions</string>
    <string name="never_show">Never Show Again</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_internet">No Internet connection detected.</string>

    <!-- Recovery -->
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_bootloader_text">Reboot Bootloader</string>
    <string name="reboot_confirm">Are you sure you want to reboot?</string>

    <!-- Installation-->
    <string name="flashConfirm">Do you want to flash the downloaded kernel?</string>
    <string name="rootDenied">Root Access Denied</string>
    <string name="flash_kernel">Kernel Downloaded</string>
    <string name="flash_confirm">Do you want to flash the downloaded kernel?</string>
    <string name="root_permissions_denied">Root permissions denied!</string>
    <string name="ok">I\'m Stupid</string>
    <string name="lineage_help">The LineageOS version of the Kernel is only specific for LineageOS Gestures.
        Any other custom ROM based on LineageOS is compatible with the AOSP kernel.</string>

    <!-- Settings -->
    <string name="settings">Settings</string>


    <!-- Libraries -->
    <string-array name="library_name">
        <item>AHBottomNavigation</item>
        <item>AndroidIconics</item>
        <item>ButterKnife</item>
    </string-array>
    <string-array name="library_version">
        <item>2.0.6</item>
        <item>2.8.4</item>
        <item>8.5.1</item>
    </string-array>
    <string-array name="library_description">
        <item>aurelhubert</item>
        <item>mikepenz</item>
        <item>jakewharton</item>
    </string-array>
    <string-array name="library_urls">
        <item>https://github.com/aurelhubert/ahbottomnavigation</item>
        <item>https://github.com/mikepenz/Android-Iconics</item>
        <item>https://github.com/JakeWharton/butterknife</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
