<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="io.arsenic.updater.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/versionSelectTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="8dp"
                        android:text="@string/version_select"
                        android:layout_centerHorizontal="true"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:layout_margin="8dp"
                        android:layout_below="@+id/versionSelectTextView"
                        android:layout_centerHorizontal="true"/>

                    <Button
                        android:id="@+id/searchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_below="@+id/spinner"
                        android:layout_centerHorizontal="true"
                        android:text="@string/search" />
                </RelativeLayout>

        </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/help_card_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/hintTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_margin="8dp"
                        android:text="@string/download_hint"
                        android:textAllCaps="true"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/lineage_help"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/lineage_help" />

                    <View
                        android:layout_margin="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_300"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/dismiss"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_margin="16dp"
                            android:text="@string/dismiss"
                            android:textAllCaps="true"
                            android:gravity="end"/>

                        <TextView
                            android:id="@+id/never_show"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_margin="16dp"
                            android:text="@string/never_show"
                            android:textAllCaps="true"
                            android:gravity="end"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        </LinearLayout>

    </FrameLayout>

</ScrollView>