<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="io.arsenic.updater.fragments.HomeFragment">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/kernelVersionTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:text="@string/current_version" />

                        <TextView
                            android:id="@+id/kvTextView"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/update_card_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <FrameLayout
                            android:id="@+id/update_container"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foregroundGravity="center"
                            android:orientation="vertical"
                            android:background="@color/grey_600">

                            <ImageView
                                android:id="@+id/update_icon"
                                android:layout_width="74dp"
                                android:layout_height="74dp"
                                android:layout_gravity="center"
                                android:contentDescription="@string/update_check_text" />

                            <ProgressBar
                                android:id="@+id/update_check_progress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:indeterminateTint="@color/grey_700"
                                android:visibility="gone"/>

                        </FrameLayout>

                        <TextView
                            android:id="@+id/update_status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:text="@string/update_check_text"
                            android:textAllCaps="true"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/downloadUpdate_card_view"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/download_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/download_update_text"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rebootRecovery_card_view"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/reboot_recovery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/reboot_recovery_text"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/rebootBootloader_card_view"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/reboot_bootloader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/reboot_bootloader_text"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>

            </LinearLayout>

</ScrollView>
